# VS-Server

./: CMakeLists.txt  README.md  index.html  main.cpp  newIndex.html  test.cpp
diagram/: Class_diagram.uxf  Sequence_diagram.uxf  Sequence_diagram_login.uxf  Sequence_diagram_send_msg.uxf  activity_diagram.uxf  activity_diagram_datatransfer.uxf  activity_diagram_edit-friends.uxf  activity_diagram_edit-profile.uxf  activity_diagram_logout.uxf  activity_diagram_manage-user.uxf  activity_diagram_mod-chatroom.uxf  activity_diagram_send-msg.uxf  activity_diagram_set-operator-status.uxf  activity_diagram_set-status.uxf
include/: Chatroom.h  Client.h  Database.h  MessageParser.h  Server.h
javascript/: websocket.js
src/: Chatroom.cpp  Client.cpp  Database.cpp  Datebase.cpp  MessageParser.cpp  Server.cpp
webclient-templates/: chat-template.html  chat.hmtl  chat.html  intern.html  login.html  register.html  searchFriends.html
webclient-templates/css/: custom.css
